--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,14 @@ jobs:
 
   build:
 
-    # Specify the OS to run tests on
-    runs-on: ubuntu-latest
+    # Matrix definition of accepted python versions and OS's
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "macros-latest", "windows-latest"]
+        python-version: ["3.10", "3.11", "3.12"]
+
+    # Specify the OS matrix to run tests on
+    runs-on: ${{ matrix.os }}
 
     # A job is a sequence of steps
     steps:
@@ -19,10 +25,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Set up Python 3.11
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.python-version }}
       
       - name: Install Python dependencies
         run: |
