--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,8 @@ jobs:
       - name: Test with PyTest
         run: |
           python -m pytest --cov=inflammation.models tests/test_models.py
+
+      # Add pylint to each CI run
+      - name: Check style with Pylint
+        run: |
+          python -m pylint --fail-under=0 --reports=y inflammation
