--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
       # Add pylint to each CI run
       - name: Check style with Pylint
         run: |
-          python -m pylint --fail-under=0 --reports=y inflammation
+          python -m pylint --reports=y inflammation
